# user_management

./: .gitignore  Cargo.toml  LICENSE
migrations/: 20200803160001_create-users.sql  20200804163240_add-admin-switch.sql  20200805180249_add-verified-email-switch.sql  20200807220344_make-email-unique.sql
src/: main.rs  models.rs  utils.rs
src/routes/: login.rs  registration.rs
static/: main.css
templates/: base.html  login.html  register.html
