[package]
name = "user_management"
version = "0.1.0"
authors = ["Owen Salter <owen@devosmium.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fll-scoring = { path = "../core" }
actix-web = "2.0"
serde = "1.0"
serde_json = "1.0"
actix-identity = "0.2"
argonautica = { git = "https://github.com/bcmyers/argonautica", rev = "67fc8d8d7d67696cd8ca7a59b92531f06b089212" }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
sparkpost = "0.5"
uuid = { version = "0.8", features = ["serde", "v4", "v5"] }

actix-rt = "1.0"
tera = "1.4"
handlebars = {version = "3.3", features = ["dir_source"] }

sqlx = { version = "0.3", features = ["postgres", "uuid"] }

fern = "0.6"
log = "0.4"
